# tbp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: Build and Deploy Site to Pages.yml  CI.yml  Code-CI.yml  Deploy-Jekyll-to-Pages.yml  Docs-CI.yml  Setup-tbp.yml  codeql.yml
docs/: .gitignore  Gemfile  _config.yml  index.md
docs/_data/: version.yml
docs/_includes/: head_custom.html  nav_footer_custom.html
docs/_sass/custom/: custom.scss
docs/docs/: command-language.md  contributing.md  faq.md  getting-started.md  tb-language.md  thoughts.md
examples/: adventure.tbp  deep.tbp  euphoria.tbp  fib.tbp  fizzbuzz.tbp  fizzbuzz2.tbp  gotoheck.tbp  life.tbp  lintdemo.tbp  pas.tbp  prime-decomp.tbp  rand.tbp  sierpinski.tbp  sq-cu-digits.tbp  srps.tbp  tbp.tbp  tflash.tbp  tic-tac-toe.tbp  ttt-c.tbp
grammar/: grammar_tests.txt  tiny_basic_grammar.ebnf
sizzle/: sizzle-steps.md  tbp-sizzle-script.txt  tbp-sizzle.cast
src/tbp/: __init__.py  __main__.py  astprinter.py  driver.py  errors.py  helpers.py  interpreter.py  languageitems.py  linter.py  memory.py  parser.py  scanner.py  symboltable.py  tokens.py
tests/: __init__.py  cmd_lang_test.py  controlkeys_test.py  debugger_test.py  driver_test.py  helpers_test.py  interpreter_test.py  lang_test.py  linter_test.py  memory_test.py  parser_test.py  programs.py  scanner_test.py  symboltable_test.py  tokens_test.py
tools/: dev-setup.sh  num_pytest_tests.py  releasing.md  venv-setup.sh
